ASSEMBLY = Banshee.CueSheets
LINK = $(BANSHEE_LIBS)

SOURCES =  \
	Banshee.CueSheets/CueSheet/CueSheet.cs \
	Banshee.CueSheets/CueSheet/CueSheetEntry.cs \
	Banshee.CueSheets/CueSheetsSource.cs \
	Banshee.CueSheets/Data/CS_AlbumInfo.cs \
	Banshee.CueSheets/Data/CS_ArtistInfo.cs \
	Banshee.CueSheets/Data/CS_ComposerInfo.cs \
	Banshee.CueSheets/Data/CS_TrackInfoDb.cs \
	Banshee.CueSheets/Data/GenreInfo.cs \
	Banshee.CueSheets/Gui/ComposerListView.cs \
	Banshee.CueSheets/Gui/CueSheetEditor.cs \
	Banshee.CueSheets/Gui/CueSheetsPrefs.cs \
	Banshee.CueSheets/Gui/GenreListView.cs \
	Banshee.CueSheets/Model/CS_AlbumModel.cs \
	Banshee.CueSheets/Model/CS_ArtistModel.cs \
	Banshee.CueSheets/Model/CS_ComposerModel.cs \
	Banshee.CueSheets/Model/CS_GenreModel.cs \
	Banshee.CueSheets/Tools/Loosely.cs \
	Banshee.CueSheets/Tools/Tools.cs \
	Banshee.CueSheets/Version/CS_Info.cs

RESOURCES = CueSheets.addin.xml

include $(top_srcdir)/build/build.mk
