ASSEMBLY = Banshee.CueSheets
LINK = $(BANSHEE_LIBS)

SOURCES =  \
	Banshee.CueSheets/CueSheet/CueSheet.cs \
	Banshee.CueSheets/CueSheet/CueSheetEntry.cs \
	Banshee.CueSheets/CueSheetsSource.cs \
	Banshee.CueSheets/Data/CS_AlbumInfo.cs \
	Banshee.CueSheets/Data/CS_ArtistInfo.cs \
	Banshee.CueSheets/Data/CS_ComposerInfo.cs \
	Banshee.CueSheets/Data/CS_TrackInfoDb.cs \
	Banshee.CueSheets/Data/GenreInfo.cs \
	Banshee.CueSheets/Gui/Actions.cs \
	Banshee.CueSheets/Gui/CS_AlbumListView.cs \
	Banshee.CueSheets/Gui/CS_ArtistListView.cs \
	Banshee.CueSheets/Gui/CS_CollectionSearchEntry.cs \
	Banshee.CueSheets/Gui/CS_ComposerListView.cs \
	Banshee.CueSheets/Gui/CS_GenreListView.cs \
	Banshee.CueSheets/Gui/CueSheetEditor.cs \
	Banshee.CueSheets/Gui/CueSheetsPrefs.cs \
	Banshee.CueSheets/Gui/CueSheetsView.cs \
	Banshee.CueSheets/Gui/MusicToDevice.cs \
	Banshee.CueSheets/Model/CS_AlbumModel.cs \
	Banshee.CueSheets/Model/CS_ArtistModel.cs \
	Banshee.CueSheets/Model/CS_ComposerModel.cs \
	Banshee.CueSheets/Model/CS_GenreModel.cs \
	Banshee.CueSheets/mp3splt/Mp3Split.cs \
	Banshee.CueSheets/mp3splt/Mp3SplitTrack.cs \
	Banshee.CueSheets/Tools/Loosely.cs \
	Banshee.CueSheets/Tools/Tools.cs \
	Banshee.CueSheets/Version/CS_Info.cs

RESOURCES =  \
	CueSheets.addin.xml \
	Resources/GlobalUI.xml

include $(top_srcdir)/build/build.mk
