ASSEMBLY = Banshee.Fanart
LINK = $(BANSHEE_LIBS)

SOURCES =  \
	Banshee.Fanart.UI/FanartArtistColumnCell.cs \
	Banshee.Fanart.UI/FanartArtistListView.cs \
	Banshee.Fanart/ArtistImageJob.cs \
	Banshee.Fanart/CorrectResults.cs \
	Banshee.Fanart/FanartArtistImageSpec.cs \
	Banshee.Fanart/FanartMetadataProvider.cs \
	Banshee.Fanart/FanartMusicBrainz.cs \
	Banshee.Fanart/FanartQueryJob.cs \
	Banshee.Fanart/FanartService.cs \
	Banshee.Fanart/IncorrectResults.cs \
	Banshee.Fanart/Results.cs \
	Fanart/Downloader.cs \
	Fanart/FanartCore.cs \
	Fanart/FanartDownloader.cs \
	Utils/IDictionaryUtils.cs

RESOURCES = Fanart.addin.xml

include $(top_srcdir)/build/build.mk
