ASSEMBLY = Banshee.FolderSync
LINK = $(BANSHEE_LIBS)

SOURCES =  \
	Banshee.FolderSync/FolderSyncController.cs \
	Banshee.FolderSync/FolderSyncSource.cs \
	Banshee.FolderSync/FolderSyncView.cs

RESOURCES =  \
	FolderSync.addin.xml \
	Resources/ActiveUI.xml \
	Resources/MenuUI.xml

include $(top_srcdir)/build/build.mk
