ASSEMBLY = Banshee.Jamendo
LINK = $(BANSHEE_LIBS) $(BANSHEE_WEBBROWSER_LIBS)

SOURCES =  \
	Banshee.Jamendo/JamendoSource.cs \
	Banshee.Jamendo/JamendoView.cs \
	Banshee.Jamendo/JamendoWebBrowserShell.cs

RESOURCES =  \
	Jamendo.addin.xml \
	ThemeIcons/22x22/categories/jamendo.png

include $(top_srcdir)/build/build.mk
